{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 24,
  "lineage": "3e752c40-46ae-cf3a-9a1d-073d2251df8c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "wpt-live-network",
            "mtu": 0,
            "name": "wpt-live-network",
            "project": "wpt-live",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/networks/wpt-live-network",
            "timeouts": {
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-30T15:49:56.487-07:00",
            "fingerprint": "_4CEx9NGrfE=",
            "gateway_address": "10.127.0.1",
            "id": "us-central1/wpt-live-subnetwork",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "wpt-live-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/networks/wpt-live-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wpt-live",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/subnetworks/wpt-live-subnetwork",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
            }
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.wpt-live",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "web-platform-tests-live-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.223.122.27",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-10-30T15:49:38.932-07:00",
            "id": "wpt-live/us-central1/wpt-tot-address",
            "name": "wpt-tot-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/addresses/wpt-tot-address",
            "timeouts": {
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-0",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-3",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-5",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-2",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-4",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-1",
              "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-6"
            ]
          }
        }
      ]
    },
    {
      "module": "module.wpt-live",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8000",
                  "443",
                  "8001",
                  "8002",
                  "8003",
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-30T15:49:56.982-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "wpt-tot-load-balancing-vm-service",
            "log_config": [],
            "name": "wpt-tot-load-balancing-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/networks/wpt-live-network",
            "priority": 1000,
            "project": "wpt-live",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/firewalls/wpt-tot-load-balancing-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wpt-tot-allow"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.wpt-live",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wpt-server-mig-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-30T15:49:57.561-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "wpt-tot-wpt-servers-vm-hc",
            "log_config": [],
            "name": "wpt-tot-wpt-servers-vm-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/networks/wpt-live-network",
            "priority": 1000,
            "project": "wpt-live",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/firewalls/wpt-tot-wpt-servers-vm-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "wpt-tot-allow"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.wpt-live",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wpt-servers-default-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-27T06:54:16.067-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "wpt-tot-wpt-servers-vm-ssh",
            "log_config": [],
            "name": "wpt-tot-wpt-servers-vm-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/networks/wpt-live-network",
            "priority": 1000,
            "project": "wpt-live",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/global/firewalls/wpt-tot-wpt-servers-vm-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.wpt-live",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:46.570-07:00",
            "id": "wpt-tot-load-balancing-0",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-0",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-0",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:50.318-07:00",
            "id": "wpt-tot-load-balancing-1",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-1",
            "network_tier": "PREMIUM",
            "port_range": "8000-8000",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-1",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:48.236-07:00",
            "id": "wpt-tot-load-balancing-2",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-2",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-2",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:47.101-07:00",
            "id": "wpt-tot-load-balancing-3",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-3",
            "network_tier": "PREMIUM",
            "port_range": "8001-8001",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-3",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:49.208-07:00",
            "id": "wpt-tot-load-balancing-4",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-4",
            "network_tier": "PREMIUM",
            "port_range": "8002-8002",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-4",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2019-10-30T15:49:47.752-07:00",
            "id": "wpt-tot-load-balancing-5",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-5",
            "network_tier": "PREMIUM",
            "port_range": "8003-8003",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-5",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2020-08-11T07:10:08.564-07:00",
            "id": "wpt-tot-load-balancing-6",
            "ip_address": "35.223.122.27",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wpt-tot-load-balancing-6",
            "network_tier": "PREMIUM",
            "port_range": "8443-8443",
            "project": "wpt-live",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/forwardingRules/wpt-tot-load-balancing-6",
            "target": "https://www.googleapis.com/compute/v1/projects/wpt-live/regions/us-central1/targetPools/wpt-tot-load-balancing",
            "timeouts": {
            }
          },
          "dependencies": [
            "module.wpt-live.google_compute_address.web-platform-tests-live-address",
            "module.wpt-live.google_compute_http_health_check.default",
            "module.wpt-live.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}